0.2.3
 - fix: properly handle nan-valued data in collect (#36)
0.2.2
 - fix: properly handle nan-valued data (#25)
 - fix: correctly open bmlab files with multiple repetitions (#26)
0.2.1
 - enh: keep the order of data keys returned by bmlab for user convenience (#24)
 - setup: migrate from PyQt5 (5.15.0) to PyQt6 (6.2.0) (#23)
 - setup: bump bmlab from 0.1.1 to 0.1.2 (#24)
 - setup: bump pyqtgraph from 0.12.3 to 0.12.4 (#23)
0.2.0
 - feat: support bmlab session file format (#18)
 - enh: prevent users from loading the same file twice
0.1.2
 - fix: color of shapes in colocalize view not updated when changed
   in collect view
 - setup: bump pyqtgraph from 0.12.1 to 0.12.3
 - setup: bump required Python version to 3.7, because pyqtgraph
   has that dependency
0.1.1
 - initial public release